# my_project

./: CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/espressif__esp_lcd_st7701/: .component_hash  esp_lcd_st7701.c  idf_component.yml
components/espressif__esp_lcd_st7701/include/: esp_lcd_st7701.h
main/: CMakeLists.txt  idf_component.yml  main.c
main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h
main/ui/fonts/: ui_font_B108.c  ui_font_B216.c  ui_font_B432.c  ui_font_Font1.c  ui_font_R108.c  ui_font_R81.c
main/ui/images/: ui_img_10_png.c  ui_img_1134171349.c  ui_img_11_png.c  ui_img_12_png.c  ui_img_13_png.c  ui_img_1487819550.c  ui_img_14_png.c  ui_img_15_png.c  ui_img_16_png.c  ui_img_17_png.c  ui_img_1862254629.c  ui_img_18_png.c  ui_img_1909824307.c  ui_img_19_png.c  ui_img_1_png.c  ui_img_2079066768.c  ui_img_20_png.c  ui_img_21_png.c  ui_img_22_png.c  ui_img_23_png.c  ui_img_24_png.c  ui_img_25_png.c  ui_img_269254309.c  ui_img_26_png.c  ui_img_27_png.c  ui_img_28_png.c  ui_img_29_png.c  ui_img_2_png.c  ui_img_30_png.c  ui_img_31_png.c  ui_img_32_png.c  ui_img_33_png.c  ui_img_34_png.c  ui_img_35_png.c  ui_img_36_png.c  ui_img_37_png.c  ui_img_38_png.c  ui_img_39_png.c  ui_img_3_png.c  ui_img_40_png.c  (+16 more)
main/ui/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c
mpu6050/sample_project/: partitions.csv  sdkconfig
mpu6050/sample_project/main/: CMakeLists.txt  main.c
mpu6050/sample_project/main/innotech/device/: innotech_device.c  innotech_device.h
mpu6050/sample_project/main/innotech/mpu6050_driver/: CMakeLists.txt  empl_driver.c  empl_driver.h  inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  inv_mpu_dmp_motion_driver.h  mpu_dmp_driver.c  mpu_dmp_driver.h
