SET(SOURCES screens/ui_Screen1.c
    screens/ui_Screen2.c
    screens/ui_Screen3.c
    ui.c
    components/ui_comp_hook.c
    ui_helpers.c
    ui_events.c
    images/ui_img_9_png.c
    images/ui_img_13_png.c
    images/ui_img_15_png.c
    images/ui_img_2_png.c
    images/ui_img_3_png.c
    images/ui_img_4_png.c
    images/ui_img_1_png.c
    images/ui_img_33_png.c
    images/ui_img_11_png.c
    images/ui_img_12_png.c
    images/ui_img_10_png.c
    images/ui_img_14_png.c
    images/ui_img_16_png.c
    images/ui_img_17_png.c
    images/ui_img_18_png.c
    images/ui_img_19_png.c
    images/ui_img_20_png.c
    images/ui_img_21_png.c
    images/ui_img_22_png.c
    images/ui_img_23_png.c
    images/ui_img_24_png.c
    images/ui_img_25_png.c
    images/ui_img_26_png.c
    images/ui_img_27_png.c
    images/ui_img_28_png.c
    images/ui_img_29_png.c
    images/ui_img_30_png.c
    images/ui_img_31_png.c
    images/ui_img_32_png.c
    images/ui_img_34_png.c
    images/ui_img_35_png.c
    images/ui_img_36_png.c
    images/ui_img_37_png.c
    images/ui_img_38_png.c
    images/ui_img_39_png.c
    images/ui_img_40_png.c
    images/ui_img_41_png.c
    images/ui_img_42_png.c
    images/ui_img_43_png.c
    images/ui_img_44_png.c
    images/ui_img_45_png.c
    images/ui_img_46_png.c
    images/ui_img_47_png.c
    images/ui_img_7_png.c
    images/ui_img_8_png.c
    fonts/ui_font_B108.c
    fonts/ui_font_B216.c
    fonts/ui_font_B432.c
    fonts/ui_font_Font1.c
    fonts/ui_font_R108.c
    fonts/ui_font_R81.c)

add_library(ui ${SOURCES})
